--- a/app/src/main/res/layout/activity_intent.xml
+++ b/app/src/main/res/layout/activity_intent.xml
@@ -41,17 +41,6 @@
         app:layout_constraintTop_toBottomOf="@id/btnOpenLink" />
 
     <Button
-        android:id="@+id/btnShareContent"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="5dp"
-        android:text="@string/button_share_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btnPhoneCall" />
-
-    <Button
         android:id="@+id/btnOpenMap"
         android:layout_width="match_parent"
         android:layout_height="50dp"
@@ -60,7 +49,7 @@
         android:text="@string/button_open_in_map_view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btnShareContent" />
+        app:layout_constraintTop_toBottomOf="@id/btnPhoneCall" />
 
     <Button
         android:id="@+id/btnTakePicture"
@@ -84,5 +73,25 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnTakePicture"
         tools:ignore="ContentDescription" />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/btnShareContent"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_margin="20dp"
+        android:background="?attr/selectableItemBackground"
+        app:cardBackgroundColor="@color/white"
+        app:cardCornerRadius="25dp"
+        app:layout_constraintEnd_toEndOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="@+id/imageView">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            android:src="@drawable/share_icon"
+            tools:ignore="ContentDescription" />
+
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
