--- a/app/src/main/res/layout/task_stack_menu.xml
+++ b/app/src/main/res/layout/task_stack_menu.xml
@@ -44,4 +44,12 @@
         android:layout_marginTop="5dp"
         android:text="@string/button_activity_five_flag_new_task" />
 
+    <Button
+        android:id="@+id/buttonActivitySix"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="5dp"
+        android:text="@string/button_activity_six_affinities" />
+
 </LinearLayout>
