UI Part 5 and 6

--- a/app/src/main/res/layout/activity_user_interface.xml
+++ b/app/src/main/res/layout/activity_user_interface.xml
@@ -24,6 +24,12 @@
             android:layout_height="wrap_content"
             android:text="@string/button_layouts" />
 
+        <Button
+            android:id="@+id/btn_constraint_layouts"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/button_constraint_layout" />
+
     </LinearLayout>
 
 </ScrollView>
