--- a/app/src/main/res/layout/activity_layout.xml
+++ b/app/src/main/res/layout/activity_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
@@ -150,6 +151,75 @@
         android:layout_weight="1"
         android:background="@android:color/holo_green_dark">
 
+        <View
+            android:id="@+id/viewOne"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.8"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <View
+            android:id="@+id/viewTwo"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginStart="10dp"
+            android:background="@color/red"
+            app:layout_constraintBottom_toBottomOf="@+id/viewOne"
+            app:layout_constraintStart_toEndOf="@+id/viewOne"
+            app:layout_constraintTop_toTopOf="@+id/viewOne" />
+
+        <View
+            android:id="@+id/viewThree"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginBottom="10dp"
+            android:background="@color/red"
+            app:layout_constraintBottom_toTopOf="@+id/viewOne"
+            app:layout_constraintEnd_toEndOf="@+id/viewOne"
+            app:layout_constraintStart_toStartOf="@+id/viewOne" />
+
+        <View
+            android:id="@+id/viewFour"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginEnd="10dp"
+            android:background="@color/red"
+            app:layout_constraintBottom_toBottomOf="@id/viewOne"
+            app:layout_constraintEnd_toStartOf="@id/viewOne"
+            app:layout_constraintTop_toTopOf="@id/viewOne" />
+
+        <View
+            android:id="@+id/viewFive"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginTop="10dp"
+            android:background="@color/red"
+            app:layout_constraintEnd_toEndOf="@id/viewOne"
+            app:layout_constraintStart_toStartOf="@id/viewOne"
+            app:layout_constraintTop_toBottomOf="@id/viewOne" />
+
+        <View
+            android:id="@+id/viewSix"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:background="@color/red"
+            app:layout_constraintEnd_toEndOf="@+id/viewTwo"
+            app:layout_constraintTop_toTopOf="@+id/viewThree" />
+
+        <View
+            android:id="@+id/viewSeven"
+            android:layout_width="20dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:background="@color/white"
+            app:layout_constraintDimensionRatio="5:5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
