UI Part 7 (Animation)

--- a/app/src/main/res/layout/animation_final_layout.xml
+++ b/app/src/main/res/layout/animation_final_layout.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".userinterface.ConstraintLayoutActivity">
+    android:layout_height="match_parent">
 
     <View
         android:id="@+id/viewOne"
@@ -62,27 +60,17 @@
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:background="@color/red"
-        app:layout_constraintEnd_toEndOf="@+id/viewTwo"
-        app:layout_constraintTop_toTopOf="@+id/viewThree" />
+        app:layout_constraintBottom_toBottomOf="@+id/viewFive"
+        app:layout_constraintStart_toStartOf="@+id/viewFour" />
 
     <View
         android:id="@+id/viewSeven"
-        android:layout_width="80dp"
-        android:layout_height="40dp"
+        android:layout_width="40dp"
+        android:layout_height="80dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
-        android:background="@color/black"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <View
-        android:id="@+id/viewEight"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
         android:background="@color/red"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
