--- a/app/src/main/res/layout/activity_user_interface.xml
+++ b/app/src/main/res/layout/activity_user_interface.xml
@@ -30,6 +30,12 @@
             android:layout_height="wrap_content"
             android:text="@string/button_constraint_layout" />
 
+        <Button
+            android:id="@+id/btn_dialogs"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/button_dialogs" />
+
     </LinearLayout>
 
 </ScrollView>
