UI Part 12 (Sheets Introduction)

--- a/app/src/main/res/layout/activity_user_interface.xml
+++ b/app/src/main/res/layout/activity_user_interface.xml
@@ -36,6 +36,12 @@
             android:layout_height="wrap_content"
             android:text="@string/button_dialogs" />
 
+        <Button
+            android:id="@+id/btn_sheets"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/button_sheets" />
+
     </LinearLayout>
 
 </ScrollView>
