--- a/app/src/main/res/layout/activity_user_interface.xml
+++ b/app/src/main/res/layout/activity_user_interface.xml
@@ -42,6 +42,12 @@
             android:layout_height="wrap_content"
             android:text="@string/button_sheets" />
 
+        <Button
+            android:id="@+id/btn_fragments"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/button_fragments" />
+
     </LinearLayout>
 
 </ScrollView>
