--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -39,6 +39,13 @@
             android:text="Four"
             tools:ignore="HardcodedText" />
 
+        <Button
+            android:id="@+id/btn_back"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Back"
+            tools:ignore="HardcodedText" />
+
     </LinearLayout>
 
 </ScrollView>
