--- a/app/src/main/res/layout/fragment_language.xml
+++ b/app/src/main/res/layout/fragment_language.xml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:paddingHorizontal="20dp"
+    android:paddingVertical="30dp"
     tools:context=".userinterface.tabs.LanguageFragment">
 
-</FrameLayout>
+    <Button
+        android:id="@+id/btn_theme_change"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/button_theme_change" />
+
+</LinearLayout>
