--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -38,6 +38,12 @@
                 android:layout_height="wrap_content"
                 android:text="@string/button_language_change" />
 
+            <Button
+                android:id="@+id/btn_theme_change"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/button_theme_change" />
+
         </LinearLayout>
 
     </ScrollView>
