Add animation and dialog fragment

--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -44,6 +44,12 @@
                 android:layout_height="wrap_content"
                 android:text="@string/button_theme_change" />
 
+            <Button
+                android:id="@+id/btn_about_us"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/button_about_us" />
+
         </LinearLayout>
 
     </ScrollView>
