--- a/app/src/main/res/layout/activity_resources.xml
+++ b/app/src/main/res/layout/activity_resources.xml
@@ -9,12 +9,11 @@
     tools:context=".resources.ResourcesActivity">
 
     <TextView
+        style="@style/SubtitleText"
         android:id="@+id/subtitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/label_resource_subtitle"
-        android:textSize="@dimen/text.subtitle" />
-
+        android:text="@string/label_resource_subtitle"/>
     <Space
         android:layout_width="wrap_content"
         android:layout_height="@dimen/spacing.large" />
@@ -28,6 +27,7 @@
             android:id="@+id/btn_change_language"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:enabled="false"
             android:text="@string/button_language_change" />
 
         <Button
