--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -11,6 +11,9 @@
         <item name="android:windowBackground">@color/softer_black</item>
         <!--<item name="android:textColor">@color/textColorPrimary</item>-->
 
+        <!--<item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">true</item>-->
+        <item name="android:navigationBarColor">@android:color/transparent</item>
+
         <item name="textAllCaps">false</item>
     </style>
 </resources>
