--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.AppTest" parent="Theme.Material3.DayNight">
         <!-- Customize your light theme here. -->
@@ -13,8 +13,10 @@
         <!--<item name="textColorPrimary">@android:color/primary_text_light</item>-->
         <!--<item name="android:windowAnimationStyle">@style/WindowAnimationStyle</item>-->
 
-        <!--<item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">true</item>
-        <item name="android:screenOrientation">portrait</item>
+        <!--<item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">true</item>-->
+        <item name="android:navigationBarColor">@android:color/transparent</item>
+
+        <!--<item name="android:screenOrientation">portrait</item>
         <item name="android:windowDisablePreview">true</item>
         <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>-->
 
@@ -31,7 +33,6 @@
     <style name="Theme.AppTest" parent="Base.Theme.AppTest" />
 
     <style name="PrimaryCard">
-        <item name="cardBackgroundColor">@android:color/darker_gray</item>
         <item name="cardCornerRadius">10dp</item>
         <item name="cardElevation">4dp</item>
     </style>
